fix(check-change): answers in table now wrap for long strings
* Add SASS class
* Add class to table cells

Jira SA-1710

--- a/app/assets/sass/_shame.scss
+++ b/app/assets/sass/_shame.scss
@@ -29,3 +29,8 @@
     margin-bottom: 32px;
   }
 }
+
+.gysp-table__cell--wrap {
+  word-break: break-word;
+  overflow-wrap: break-word;
+}
